# ZenML-Practice

./: pyproject.toml  run.py
